cyclonedx-bom/tests/spec/snapshots/1.4/it_should_parse_all_of_the_valid_json_specifications@valid-external-reference-1.4.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_4.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.4/valid-external-reference-1.4.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "components": [
    {
      "type": "library",
      "publisher": "Acme Inc",
      "group": "org.example",
      "name": "mylibrary",
      "version": "1.0.0",
      "externalReferences": [
        {
          "type": "advisories",
          "url": "https://example.org/security/feed/csaf",
          "comment": "Security advisories from the vendor"
        },
        {
          "type": "bom",
          "url": "https://example.org/support/sbom/portal-server/1.0.0",
          "comment": "An external SBOM that describes what this component includes",
          "hashes": [
            {
              "alg": "SHA-256",
              "content": "708f1f53b41f11f02d12a11b1a38d2905d47b099afc71a0f1124ef8582ec7313"
            }
          ]
        },
        {
          "type": "documentation",
          "url": "https://example.org/support/documentation/portal-server/1.0.0",
          "comment": "Vendor provided documentation for the product"
        }
      ]
    }
  ]
}
